--- a/html/component/menu.html
+++ b/html/component/menu.html
@@ -4,8 +4,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/all.css">
-    <script src="js/All/all.js"></script>
+    <link rel="stylesheet" href="../CSS/all.css">
+    <script src="../js/All/all.js"></script>
 </head>
 
 <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
@@ -17,18 +17,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link pd" href="aboutUs.html">GIỚI THIỆU</a></li>
+                <li class="nav-item"><a class="nav-link pd" href="../aboutUs.html">GIỚI THIỆU</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         DỊCH VỤ QUAN TRẮC KHÍ TƯỢNG THỦY VĂN
                     </a>
                     <ul class="text-center dropdown-menu">
-                        <li><a class="dropdown-item" href="solution/solution.html?thietBiQuanTrac">
+                        <li><a class="dropdown-item" href="../solution/solution.html?thietBiQuanTrac">
                                 Dịch vụ quan trắc khí tượng thủy văn</a></li>
                         <li><a class="dropdown-item" href="http://wsm.aks.vn/dang-nhap">
                                 Hệ thống giám sát trạm dữ liệu</a></li>
-                        <li><a class="dropdown-item" href="product/product.html?thietBiQuanTrac">
+                        <li><a class="dropdown-item" href="../product/product.html?thietBiQuanTrac">
                                 Thiết bị giám sát - điều khiển trạm dữ liệu</a></li>                                
                     </ul>
                 </li>
@@ -38,11 +38,11 @@
                         HỆ THỐNG PHÒNG CHÁY - CHỮA CHÁY
                     </a>
                     <ul class="text-center dropdown-menu">
-                        <li><a class="dropdown-item" href="solution/solution.html?giaiPhapBaoChay">
+                        <li><a class="dropdown-item" href="../solution/solution.html?giaiPhapBaoChay">
                                 Giải pháp quản lý cảnh báo cháy sớm</a></li>
-                        <li><a class="dropdown-item" href="Tech/aboutTech.html">
+                        <li><a class="dropdown-item" href="../Tech/aboutTech.html">
                                 Công nghệ áp dụng</a></li>
-                        <li><a class="dropdown-item" href="product/product.html?thietBiBaoChay">
+                        <li><a class="dropdown-item" href="../product/product.html?thietBiBaoChay">
                                 Thiết bị phòng cháy - chữa cháy</a></li>
                     </ul>
                 </li>
@@ -52,15 +52,15 @@
                         DỊCH VỤ AN NINH
                     </a>
                     <ul class="text-center dropdown-menu">
-                        <li><a class="dropdown-item" href="Security/security.html">
+                        <li><a class="dropdown-item" href="../Security/security.html">
                                 Dịch vụ an ninh</a></li>
-                        <li><a class="dropdown-item" href="product/product.html?thietBiCanhBao">
+                        <li><a class="dropdown-item" href="../product/product.html?thietBiCanhBao">
                                 Thiết bị giám sát</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link pd" href="buildingServices/bms.html">DỊCH VỤ KỸ
+                <li class="nav-item"><a class="nav-link pd" href="../buildingServices/bms.html">DỊCH VỤ KỸ
                         THUẬT TÒA NHÀ</a></li>
-                <li class="nav-item"><a class="nav-link pd" href="Contact.html">LIÊN HỆ</a></li>
+                <li class="nav-item"><a class="nav-link pd" href="../Contact.html">LIÊN HỆ</a></li>
             </ul>
         </div>
     </div>
